--- a/arch/mips/boot/dts/ingenic/ci20.dts
+++ b/arch/mips/boot/dts/ingenic/ci20.dts
@@ -296,6 +296,19 @@
 		};
 };
 
+&spi0 {
+	status = "okay";
+
+	assigned-clocks =
+		<&cgu JZ4780_CLK_SSIPLL>, <&cgu JZ4780_CLK_SSI>;
+	assigned-clock-parents = <0>;
+	assigned-clock-rates =
+		<12000000>;
+
+	pinctrl-names = "default";
+	pinctrl-0 = <&pins_spi0>;
+};
+
 &nemc {
 	status = "okay";
 
@@ -485,6 +498,19 @@
 		function = "mmc1";
 		groups = "mmc1-1bit-d", "mmc1-4bit-d";
 		bias-disable;
+	};
+
+
+	pins_spi0: spi0 {
+		spi0 {
+			function = "spi0";
+			groups = "spi0";
+		};
+
+		spi0-bias {
+			pins = "PE14";
+			bias-pull-up;
+		};
 	};
 };
 
